fix: collapse修改样式&兼容body

--- a/scss/themes/_cxd-variables.scss
+++ b/scss/themes/_cxd-variables.scss
@@ -232,14 +232,14 @@ $L1: 0px 4px 6px 0px rgba(8, 14, 26, 0.06),
   --ColorPicker-onDisabled-color: #999;
   --ColorPicker-boxShadow: #{$L1};
 
-  --Collapse-border: #{px2rem(1px)} solid #EBEDF5;
-  --Collapse-border-color: #EBEDF5;
+  --Collapse-border: #{px2rem(1px)} solid #{$G8};
+  --Collapse-border-color: #{$G8};
   --Collapse-header-fontSize: #{$T3};
-  --Collapse-header-fontWeight: #{$W3};
-  --Collapse-header-padding: #{px2rem(14px)};
-  --Collapse-header-bg: #F6F7FA;
-  --Collapse-header-onHover-bg: #F3F9FE;
-  --Collapse-header-bg-disabled-color: #F6F7FA;
+  --Collapse-header-fontWeight: #{$W2};
+  --Collapse-header-padding: #{px2rem(16px)};
+  --Collapse-header-bg: #{$G10};
+  --Collapse-header-onHover-bg: #{$G9};
+  --Collapse-header-bg-disabled-color: #{$G10};
   --Collapse-header-collapsed-borderBottom: none;
   --Collapse-header-wrapper-direction: row-reverse;
   --Collapse-content-padding: #{px2rem(16px)};
